--- a/src/components/styles/own.css
+++ b/src/components/styles/own.css
@@ -45,3 +45,19 @@ blockquote {
     margin-bottom: 40px;
     text-align: center;
 }
+
+.padingThumb {
+    padding: 10px;
+}
+
+.tdTitle {
+    width: 150px;
+}
+
+.tdTitleName {
+    font-weight: bold;
+}
+
+.pJustify {
+    text-align: justify;
+}
